k8s/webserver/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/dwh: "true"
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: airflow
        image: mysql:5.7
        imagePullPolicy: "IfNotPresent"
        name: airflow-mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-claim0
        - mountPath: /etc/mysql/conf.d/airflow.cnf
          name: mysql-claim1
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-claim2
      hostname: mysql
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-claim0
        persistentVolumeClaim:
          claimName: mysql-claim0
      - name: mysql-claim1
        persistentVolumeClaim:
          claimName: mysql-claim1
      - name: mysql-claim2
        persistentVolumeClaim:
          claimName: mysql-claim2
status: {}
