k8s/webserver/dwh-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dwh
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/dwh: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dwh: "true"
